tooling/nargo_cli/tests/snapshots/execution_success/regression_7143/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "array",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/61RSQrDMAy0nZxLnyJZUizd+o7eaupc+s32Xw3UAdfkFg8M2mAYNN79EDbOtfcbp1p3ttjnW61wDjhQC1qfYbBPP1ArNFoEC3NJsSDhA6JlFWDJi6KiqDyjEhVlTZYtgSFTwVWM1io2dTn1/dz9w7n/TH1zP95fL/f36+M6fAG3NfcwPAIAAA==",
  "debug_symbols": "dY/RCoMwDEX/Jc992MPmwF8ZQ2KNUghpia0wxH9fFN1ksKf05vRc2hk6asvQBOnjCPVjhlYDcxgajh5ziGLbeXFwxCYrka3gxM1KqCQZainMDibksl0aE8o2M6rRiwOSzqYV9oFpPS3ua1/+q1W1u/frR76Z/bSEPujveyfUgC3THvsi/kTzKx3k+G/S6KkrSmvTxqz7DQ==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
